# BKAL

./: CMakeLists.txt  README.md
include/: BKALTypes.h  IBox.h  ICylinder.h  IEdge.h  IFace.h  ISolid.h  ISolidMaker.h
include/BKAL/: Box.h  IBox.h  ICylinder.h  IEdge.h  IFace.h  ISolid.h  ISolidMaker.h  Types.h
include/BKAL/Fake/: Box.h  Cylinder.h  Edge.h  Face.h  FakeObjectMaker.h  Solid.h  SolidMaker.h
include/GTAL/: Types.h
libraries/: CMakeLists.txt
libraries/Fake.BKAL/include/: FakeBox.h  FakeCylinder.h  FakeEdge.h  FakeFace.h  FakeSolid.h  FakeSolidMaker.h
libraries/Fake.BKAL/src/: CMakeLists.txt  FakeBox.cpp  FakeCylinder.cpp  FakeEdge.cpp  FakeFace.cpp  FakeSolid.cpp  FakeSolidMaker.cpp
libraries/Fake.BKAL/test/: CMakeLists.txt  FakeEdgeTester.cpp  FakeFaceTester.cpp  FakeSolidMakerTester.cpp  SimpleCase.cpp
libraries/Occ.BKAL/: CMakeLists.txt
libraries/Occ.BKAL/include/: OccBox.h  OccCylinder.h  OccEdge.h  OccFace.h  OccSolid.h  OccSolidMaker.h
libraries/Occ.BKAL/src/: CMakeLists.txt  OccBox.cpp  OccCylinder.cpp  OccEdge.cpp  OccFace.cpp  OccSolid.cpp  OccSolidMaker.cpp
libraries/Occ.BKAL/test/: CMakeLists.txt  OccEdgeTester.cpp  OccFaceTester.cpp  OccSolidMakerTester.cpp  SimpleCase.cpp  SimpleCase2.cpp
src/: Box.cpp  CMakeLists.txt
src/Fake/: .Edge.cpp.swp  Box.cpp  CMakeLists.txt  Cylinder.cpp  Edge.cpp  Face.cpp  FakeObjectMaker.cpp  MockObjectMaker.cpp  Solid.cpp  SolidMaker.cpp
test/: CMakeLists.txt  FakeEdgeTester.cpp  FakeFaceTester.cpp  FakeSolidMakerTester.cpp  SimpleCase.cpp
