add_library(FakeEdge Edge.cpp)
add_library(FakeFace Face.cpp)
add_library(FakeSolid Solid.cpp)
add_library(FakeBox Box.cpp)
add_library(FakeSolidMaker SolidMaker.cpp)

target_link_libraries(FakeFace FakeEdge)
target_link_libraries(FakeSolid FakeFace)
target_link_libraries(FakeBox FakeSolid)
target_link_libraries(FakeSolidMaker FakeBox)
